--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,5 +1,5 @@
-# This is a basic workflow to help you get started with Actions
 name: Portfolio
+
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
 on:
@@ -7,12 +7,21 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
+    # --- FIX: ADDED PERMISSIONS BLOCK HERE ---
+    permissions:
+      contents: write # Allows the workflow to write to the 'gh-pages' branch
+      pages: write    # Required for GitHub Pages deployment
+      id-token: write # Required for deployment configuration
+    # -----------------------------------------
+    
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
